Tue Sep 23 16:49:12 UTC 2008  Steve Huston  <shuston@riverace.com>

        * tests/Bug_2980_Regression_Test.cpp: Adjust to shared lib suffix
          that differs from ".so". Fixes HP-UX 11iv2 on PA-RISC. Generalizes
          (and reverts) the platform tests made in
          Mon Sep 22 13:17:19 UTC 2008  Simon McQueen  <sm@prismtech.com>

Tue Sep 23 15:41:43  2008  Steve Huston  <shuston@riverace.com>

        * tests/run_test.pl: Don't delete Service_Config_Test.conf from the
          target; on local builds, it deletes it from the working dir and
          svn needs to restore it. Fixes Bugzilla #3409. Thanks to Johnny
          Willemsen for noticing this.

        * ace/os_include/sys/os_types.h:
        * ace/OS_NS_sys_stat.inl (umask): Changed mode_t from an int back to
          u_short. int conflicts with other packages' defs of mode_t (in
          particular, Perl). Of all the places mode_t is used, the only place
          int made a real difference was in calling _umask_s() on Windows
          VC8+. This change reverts the affected piece of
          Fri Mar  9 00:53:43 UTC 2007  Steve Huston  <shuston@riverace.com>

Tue Sep 23 15:32:57 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_other_tests.lst:

          Added new test for bug #3431. This test will definitely fail
          until the underlying problem in the IFR is addressed. There is
          no immediate plan to fix bug 3431.
        
Tue Sep 23 11:25:58 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * ace/Assert.h:

          Add new macro: ACE_TEST_ASSERT. Behaves just like ACE_ASSERT but it
          doesn't boil away to nothing on non debug platforms.

Mon Sep 22 23:18:36 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.inl:
        * ace/OS_NS_time.inl:
          Fixed WinCE link error

        * ace/OS_NS_unistd.cpp:
          Initialise variable with 0

        * ace/config-vxworks6.4.h: